update dockerfile and screenshot